--- a/x-corporation-uiCookies/css/style.css
+++ b/x-corporation-uiCookies/css/style.css
@@ -12,7 +12,7 @@ Global Typography
 ------------------------------------------*/
 
 h1, h2, h3, h4, h5, h6 {
-    margin      : 0 0 15px;
+    margin      : 0 0 0px;
     color       : #313131;
     font-weight : 400;
     }
@@ -372,21 +372,27 @@ Shortcode Content
     width      : auto; /* Maintain aspect ratio */
     }
 
-.navbar-brand h1 {
-        text-shadow : 2px 2px 3px black;
-        font-family : "Georgia", Times, serif;
-        color       : white; /* Initial color */
-        transition  : color 0.3s ease; /* Smooth transition effect */
-        /* font-size   : 10px; */
+.navbar-brand h1, .footer-widget h1{
+	color 		: white;
+	transition 	: color 0.3s ease; /* Smooth transition effect */
+	font-family : Baskerville, Georgia, "Kaiti", "Liberation Serif", "Kaiti SC", STKaiti, "AR PL UKai CN", "AR PL UKai HK", "AR PL UKai TW", "AR PL UKai TW MBE", "AR PL KaitiM GB", KaiTi, KaiTi_GB2312, DFKai-SB, "TW\-Kai", serif;
+	font-weight : bold;
+	font-size 	: 22px;
+	text-shadow : 2px 2px 3px black;
     }
 
-.navbar-brand h2 {
-        text-shadow : 2px 2px 3px black;
-        font-family : "Georgia", Times, serif;
-        color       : white; /* Initial color */
-        transition  : color 0.3s ease; /* Smooth transition effect */
-        /* font-size   : 10px; */
-    }
+.navbar-brand h2, .footer-widget h2 {
+	color       : white; 
+	transition  : color 0.3s ease; /* Smooth transition effect */
+	font-family : "Georgia", Times, serif;
+	font-weight : bold;
+	text-shadow : 2px 2px 3px black;
+	font-size   : 15px;
+	}
+
+.footer-widget a:hover{
+	color: #cccccc; /* Darken the color on hover */
+	}
     
 .navbar-brand:hover {
         color: rgb(163, 163, 163); /* Color when hovered */
@@ -653,8 +659,7 @@ Shortcode Content
     }
 
 
-#menu li a:hover,
-#menu li.active a {
+#menu li a:hover, #menu li.active a {
     color : #ffffff;
     }
 
