--- a/Yung-Kong-Co-Website/css/style.css
+++ b/Yung-Kong-Co-Website/css/style.css
@@ -4,7 +4,7 @@ HTML Scrolling
 
 html {
 	scroll-behavior: smooth;
-  }
+}
 
 
 /* --------------------------------------
@@ -74,6 +74,7 @@ a {
 	transition: all 0.3s ease 0s;
 }
 
+
 a,
 a:active,
 a:focus,
@@ -94,6 +95,100 @@ ul {
 	list-style: none;
 }
 
+/*----  index card hover style  ----*/
+
+#cards_landscape_wrap-2 {
+	text-align: center;
+}
+
+#cards_landscape_wrap-2 .container {
+	padding-bottom: 100px;
+}
+
+#cards_landscape_wrap-2 a {
+	text-decoration: none;
+	outline: none;
+}
+
+#cards_landscape_wrap-2 .card-flyer {
+	border-radius: 5px;
+}
+
+#cards_landscape_wrap-2 .card-flyer .image-box {
+	background: #ffffff;
+	overflow: hidden;
+	box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.50);
+	border-radius: 5px;
+}
+
+#cards_landscape_wrap-2 .card-flyer .image-box img {
+	-webkit-transition: all .9s ease;
+	-moz-transition: all .9s ease;
+	-o-transition: all .9s ease;
+	-ms-transition: all .9s ease;
+	width: 100%;
+	height: 200px;
+}
+
+#cards_landscape_wrap-2 .card-flyer:hover .image-box img {
+	opacity: 0.7;
+	-webkit-transform: scale(1.15);
+	-moz-transform: scale(1.15);
+	-ms-transform: scale(1.15);
+	-o-transform: scale(1.15);
+	transform: scale(1.15);
+}
+
+#cards_landscape_wrap-2 .card-flyer .text-box {
+	text-align: center;
+}
+
+#cards_landscape_wrap-2 .card-flyer .text-box .text-container {
+	padding: 30px 18px;
+	min-height: 300px;
+}
+
+#cards_landscape_wrap-2 .card-flyer {
+	background: #FFFFFF;
+	margin-top: 50px;
+	-webkit-transition: all 0.2s ease-in;
+	-moz-transition: all 0.2s ease-in;
+	-ms-transition: all 0.2s ease-in;
+	-o-transition: all 0.2s ease-in;
+	transition: all 0.2s ease-in;
+	box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.40);
+}
+
+#cards_landscape_wrap-2 .card-flyer:hover {
+	background: #fff;
+	box-shadow: 0px 15px 26px rgba(0, 0, 0, 0.50);
+	-webkit-transition: all 0.2s ease-in;
+	-moz-transition: all 0.2s ease-in;
+	-ms-transition: all 0.2s ease-in;
+	-o-transition: all 0.2s ease-in;
+	transition: all 0.2s ease-in;
+	margin-top: 50px;
+}
+
+#cards_landscape_wrap-2 .card-flyer .text-box p {
+	margin-top: 10px;
+	margin-bottom: 0px;
+	padding-bottom: 0px;
+	font-size: 14px;
+	letter-spacing: 1px;
+	color: #000000;
+}
+
+#cards_landscape_wrap-2 .card-flyer .text-box h6 {
+	margin-top: 0px;
+	margin-bottom: 4px;
+	font-size: 18px;
+	font-weight: bold;
+	text-transform: uppercase;
+	font-family: 'Roboto Black', sans-serif;
+	letter-spacing: 1px;
+	color: #00acc1;
+}
 
 /* --------------------
    Section Background
@@ -796,9 +891,7 @@ Shortcode Content
 /* -------------------
  Section Title Styleq
  --------------------- */
-.section-title {
-	margin-bottom: 50px;
-}
+
 
 .section-title h2 {
 	font-size: 30px;
@@ -890,8 +983,8 @@ Shortcode Content
 features start
 -----------------------------------------------------*/
 .x-features {
-	background: #4d7ecc;
-	padding: 100px 0 85px;
+	background: #6591d8;
+	padding: 80px 0 85px;
 }
 
 .x-features .section-title h2 {
@@ -1139,6 +1232,8 @@ Team
 .section-margin p {
 	text-align: center;
 }
+
+
 
 /* --------------------------------------------
     Page Title
@@ -1733,4 +1828,17 @@ service-icon-style
 
 .btn-pink {
 	background-color: #fcb2b2 !important;
+}
+
+/* ---------------------------------------------- /*
+ * Bootstrap
+/* ---------------------------------------------- */
+
+.icon-lg {
+	display: flex;
+    font-size: 2em; /* 2 times the normal size */
+}
+
+.icon-sm {
+    font-size: 0.75em; /* 0.75 times the normal size */
 }
