--- a/Yung-Kong-Co-Website/css/style.css
+++ b/Yung-Kong-Co-Website/css/style.css
@@ -1229,8 +1229,12 @@ Team
 	}
 }
 
-.section-margin p {
+.section-margin h6 {
 	text-align: center;
+}
+
+.section-margin p {
+	text-align: left;
 }
 
 
