--- a/Yung-Kong-Co-Website/css/style.css
+++ b/Yung-Kong-Co-Website/css/style.css
@@ -1840,9 +1840,299 @@ service-icon-style
 
 .icon-lg {
 	display: flex;
-    font-size: 2em; /* 2 times the normal size */
+	font-size: 2em;
+	/* 2 times the normal size */
 }
 
 .icon-sm {
-    font-size: 0.75em; /* 0.75 times the normal size */
+	font-size: 0.75em;
+	/* 0.75 times the normal size */
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* ---------------------------------------------- /*
+ * Bootstrap 5 product cards
+/* ---------------------------------------------- */
+
+
+
+
+
+.card-img,
+.card-img-top {
+	border-top-left-radius: calc(1rem - 1px);
+	border-top-right-radius: calc(1rem - 1px)
+}
+
+.card h5 {
+	overflow: hidden;
+	height: 56px;
+	font-weight: 900;
+	font-size: 1rem
+}
+
+.card-img-top {
+	width: 100%;
+	max-height: 180px;
+	object-fit: contain;
+	padding: 30px
+}
+
+
+.card:hover {
+	transform: scale(1.05);
+	box-shadow: 0 10px 20px rgba(0, 0, 0, .12), 0 4px 8px rgba(0, 0, 0, .06)
+}
+
+.label-top {
+	position: absolute;
+	background-color: #8bc34a;
+	color: #fff;
+	top: 8px;
+	right: 8px;
+	padding: 5px 10px 5px 10px;
+	font-size: .7rem;
+	font-weight: 600;
+	border-radius: 3px;
+	text-transform: uppercase
+}
+
+
+@media (max-width: 768px) {
+	.card-img-top {
+		max-height: 250px
+	}
+}
+
+
+.btn {
+	font-size: 1rem;
+	font-weight: 500;
+	text-transform: uppercase;
+	padding: 5px 50px 5px 50px
+}
+
+
+
+@media (max-width: 1025px) {
+	.btn {
+		padding: 5px 40px 5px 40px
+	}
+}
+
+@media (max-width: 250px) {
+	.btn {
+		padding: 5px 30px 5px 30px
+	}
+}
+
+.btn-warning {
+	background: none #f7810a;
+	color: #ffffff;
+	fill: #ffffff;
+	border: none;
+	text-decoration: none;
+	outline: 0;
+	box-shadow: -1px 6px 19px rgba(247, 129, 10, 0.25);
+	border-radius: 100px
+}
+
+.btn-warning:hover {
+	background: none #ff962b;
+	color: #ffffff;
+	box-shadow: -1px 6px 13px rgba(255, 150, 43, 0.35)
+}
+
+.bg-success {
+	font-size: 1rem;
+	background-color: #f7810a !important
+}
+
+
+
+.price-hp {
+	font-size: 1rem;
+	font-weight: 600;
+	color: darkgray
+}
+
+
+.fa-question-circle:before {
+	color: darkgray
+}
+
+.fa-plus:before {
+	color: darkgray
+}
+
+
+@media (max-width: 370px) {
+	.box .btn {
+		padding: 5px 40px 5px 40px;
+		font-size: 1rem
+	}
+}
+
+
+
+
+.card {
+	background: #fff;
+	box-shadow: 0 6px 10px rgba(0, 0, 0, .08), 0 0 6px rgba(0, 0, 0, .05);
+	transition: .3s transform cubic-bezier(.155, 1.105, .295, 1.12), .3s box-shadow, .3s -webkit-transform cubic-bezier(.155, 1.105, .295, 1.12);
+	border: 0;
+	border-radius: 1rem
+}
+
+
+.card-img,
+.card-img-top {
+	border-top-left-radius: calc(1rem - 1px);
+	border-top-right-radius: calc(1rem - 1px)
+}
+
+.card h5 {
+	overflow: hidden;
+	height: 56px;
+	font-weight: 900;
+	font-size: 1rem
+}
+
+.card-img-top {
+	width: 100%;
+	max-height: 180px;
+	object-fit: contain;
+	padding: 30px
+}
+
+.card h2 {
+	font-size: 1rem
+}
+
+.card:hover {
+	transform: scale(1.05);
+	box-shadow: 0 10px 20px rgba(0, 0, 0, .12), 0 4px 8px rgba(0, 0, 0, .06)
+}
+
+.label-top {
+	position: absolute;
+	background-color: #8bc34a;
+	color: #fff;
+	top: 8px;
+	right: 8px;
+	padding: 5px 10px 5px 10px;
+	font-size: .7rem;
+	font-weight: 600;
+	border-radius: 3px;
+	text-transform: uppercase
+}
+
+
+
+@media (max-width: 768px) {
+	.card-img-top {
+		max-height: 250px
+	}
+}
+
+
+
+.btn {
+	font-size: 1rem;
+	font-weight: 500;
+	text-transform: uppercase;
+	padding: 5px 50px 5px 50px
+}
+
+
+
+@media (max-width: 1025px) {
+	.btn {
+		padding: 5px 40px 5px 40px
+	}
+}
+
+@media (max-width: 250px) {
+	.btn {
+		padding: 5px 30px 5px 30px
+	}
+}
+
+.btn-warning {
+	background: none #f7810a;
+	color: #ffffff;
+	fill: #ffffff;
+	border: none;
+	text-decoration: none;
+	outline: 0;
+	box-shadow: -1px 6px 19px rgba(247, 129, 10, 0.25);
+	border-radius: 100px
+}
+
+.btn-warning:hover {
+	background: none #ff962b;
+	color: #ffffff;
+	box-shadow: -1px 6px 13px rgba(255, 150, 43, 0.35)
+}
+
+.bg-success {
+	font-size: 1rem;
+	background-color: #f7810a !important
+}
+
+
+.price-hp {
+	font-size: 1rem;
+	font-weight: 600;
+	color: darkgray
+}
+
+
+.fa-question-circle:before {
+	color: darkgray
+}
+
+.fa-plus:before {
+	color: darkgray
+}
+
+
+@media (max-width: 576px) {
+	.box-img {
+		max-width: 200px
+	}
+
+	.thumb-sec {
+		max-width: 200px
+	}
+}
+
+
+@media (max-width: 370px) {
+	.box .btn {
+		padding: 5px 40px 5px 40px;
+		font-size: 1rem
+	}
 }
