--- a/Yung-Kong-Co-Website/css/style.css
+++ b/Yung-Kong-Co-Website/css/style.css
@@ -145,7 +145,7 @@ ul {
 
 #cards_landscape_wrap-2 .card-flyer .text-box .text-container {
 	padding: 30px 18px;
-	min-height: 300px;
+	height: 350px;
 }
 
 #cards_landscape_wrap-2 .card-flyer {
@@ -891,7 +891,7 @@ Shortcode Content
 
 
 .section-title h2 {
-	font-size: 30px;
+	font-size: 40px;
 	text-transform: capitalize;
 	position: relative;
 }
@@ -933,6 +933,8 @@ Shortcode Content
 .thumbnail {
 	transition: 0.5s;
 	padding: 0px;
+	margin-top: 15px;
+	margin-bottom: 15px;
 }
 
 .thumbnail img {
@@ -2024,7 +2026,12 @@ service-icon-style
 }
 
 .card .img-box{
-	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Basic shadow */
+    width: 100%;
+    height: 150px; /* Ensure img-box has a fixed height */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Basic shadow */
 }
 
 .card p {
@@ -2045,9 +2052,6 @@ service-icon-style
 	box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.3);
 }
 
-.card-text {
-	height: 40px;
-}
 
 .card::before,
 .card::after {
@@ -2077,3 +2081,4 @@ service-icon-style
 .card:focus::after {
 	transform: scale3d(1, 1, 1);
 }
+
