--- a/Yung-Kong-Co-Website/css/style.css
+++ b/Yung-Kong-Co-Website/css/style.css
@@ -887,7 +887,7 @@ Shortcode Content
 }
 
 /* -------------------
- Section Title Styleq
+ Section Title Style
  --------------------- */
 
 
@@ -895,6 +895,7 @@ Shortcode Content
 	font-size: 40px;
 	text-transform: capitalize;
 	position: relative;
+	margin-bottom: 10px;
 }
 
 .section-title span.bordered-icon {
@@ -1012,11 +1013,13 @@ Shortcode Content
 
 
 
+/*-----------------------------
+ X-SERVICES
+--------------------------------*/
 
-
-
-
-
+.x-services {
+	padding-top: 100px;
+}
 
 @media (min-width : 768px) {
 
@@ -2019,16 +2022,14 @@ service-icon-style
 }
 
 .card img {
-	height: 150px;
-	width: auto;
-	max-width: 100%;
-	display: block;
-	object-fit: contain;
+	width: 100%;
+    height: 200px;
+    display: block;
+    object-fit: cover; /* Ensures the image covers the area */
 }
 
 .card .img-box{
     width: 100%;
-    height: 150px; /* Ensure img-box has a fixed height */
     display: flex;
     justify-content: center;
     align-items: center;
