--- a/Yung-Kong-Co-Website-Redo/css/styles.css
+++ b/Yung-Kong-Co-Website-Redo/css/styles.css
@@ -2,59 +2,103 @@
 
 
 /************************* 
+ Global
+*************************/
+
+a {
+	text-decoration: none;
+	color: inherit;
+	transition: color 0.3s ease;
+}
+
+a:hover {
+	color: #31aae2;
+}
+
+
+
+
+
+
+
+
+/************************* 
  NavBar
 *************************/
 
+/* Navbar */
 #navbar {
-	transition: background-color 0.5s ease;
-	background-color: transparent;
-	height: 80px;
-	display: flex;
-	align-items: center;
-
+    transition: background-color 0.5s ease;
+    background-color: transparent;
+    height: 80px;
+    display: flex;
+    align-items: center;
 }
 
 #navbar .navbar-brand img {
-	max-height: 60px;
-	object-fit: contain;
+    max-height: 60px;
+    object-fit: contain;
 }
 
 #navbar.navbar-scrolled {
-	background-color: #333333 !important;
+    background-color: #333333 !important;
 }
 
 #navbar .navbar-text {
-	color: white !important;
+    color: white !important;
 }
 
 #navbar .nav-link.active {
-	border-bottom: 2px solid white;
+    border-bottom: 2px solid white;
 }
 
 #navbar .nav-link {
-	border-bottom: 2px solid transparent;
-	transition: border-color 0.3s ease;
+    border-bottom: 2px solid transparent;
+    transition: border-color 0.3s ease;
 }
 
 #navbar .nav-link:hover {
-	border-bottom: 2px solid white;
+    border-bottom: 2px solid white;
 }
 
-#navbar .nav-item.dropdown:hover .dropdown-menu {
-	display: block;
-	opacity: 1;
-	transition: opacity 0.5s ease;
-}
-
+/* Dropdown menu */
 #navbar .dropdown-menu {
-	display: none;
-	opacity: 0;
-	position: absolute;
-	top: 100%;
-	left: 0;
-	z-index: 1000;
-	transition: opacity 0.5s ease;
+	position: absolute; /* Change position to absolute */
+	left: 50%;
+    display: flex;
+    flex-direction: row;
+    padding: 0;
+    margin-top: 10px;
+    background-color: #222;
+    border-radius: 0.25rem;
+    box-shadow: 0 0 0 rgba(0,0,0,.125);
+    transform: translateY(10px);
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.5s ease, visibility 0.5s ease, transform 0.3s ease;
 }
+
+#navbar .nav-item:hover .dropdown-menu {
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0);
+}
+
+#navbar .dropdown-menu .dropdown-item {
+    color: #fff;
+    transition: background-color 0.3s ease;
+    padding: 10px 15px;
+    white-space: nowrap;
+    margin: 0;
+}
+
+#navbar .dropdown-menu .dropdown-item:hover {
+    background-color: #31aae2;
+    color: #fff;
+}
+
+
+
 
 
 
@@ -100,17 +144,42 @@
 	padding: 20px;
 }
 
-
-
 /************************* 
- Footer
+Footer
 *************************/
-
-footer {
-	background-color: #333;
-}
 
 footer img {
 	max-height: 100px;
 	object-fit: contain;
 }
+
+footer .footer-section-1 {
+	background-color: #333;
+	color: #fff;
+}
+
+footer .footer-section-2 {
+	background-color: #222;
+	color: #fff;
+}
+
+footer a {
+	color: #31aae2;
+}
+
+
+footer a:hover {
+	color: #e6e6e6;
+}
+
+.footer-section-2 .footer-link {
+	color: inherit;
+	text-decoration: none;
+	transition: color 0.3s;
+}
+
+.footer-section-2 .footer-link:hover {
+	color: white;
+}
+
+
