--- a/Yung-Kong-Co-Website-Redo/css/styles.css
+++ b/Yung-Kong-Co-Website-Redo/css/styles.css
@@ -74,9 +74,9 @@ body {
 	opacity: 0;
 	visibility: hidden;
 	transition: opacity 0.5s ease, visibility 0.5s ease, transform 0.3s ease;
-	width: 100%;  
-	position: absolute;  
-	left: 0; 
+	width: 100%;
+	position: absolute;
+	left: 0;
 }
 
 #navbar .nav-item:hover .dropdown-menu {
@@ -233,4 +233,27 @@ footer a:hover {
 	padding: 20px;
 	top: 50%;
 	transform: translateY(-50%);
+}
+
+
+/************************* 
+ Card
+*************************/
+
+.custom-card-img {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	object-position: center;
+}
+
+
+.card-img-container {
+	width: 100%;
+	height: 200px;
+	overflow: hidden;
+	position: relative;
 }
