--- a/Yung-Kong-Co-Website-Redo/css/styles.css
+++ b/Yung-Kong-Co-Website-Redo/css/styles.css
@@ -56,24 +56,33 @@ body {
 /* Navbar */
 
 #navbar {
-	transition: background-color 0.5s ease;
 	background-color: transparent;
-	height: 75px;
+	transition: background-color 0.8s ease, height 0.5s ease;
+	height: 80px;
 }
 
 #navbar .navbar-brand img {
-	max-height: 60px;
+	max-height: 75px;
 	object-fit: contain;
+	transition: max-height 1s ease; /* Smooth transition for image height */
 }
+
+
+#navbar.navbar-scrolled {
+	background-color: #333333 !important;
+	height: 60px;
+}
+
+#navbar.navbar-scrolled img {
+	max-height: 50px;
+}
+
 
 #navbar .navbar-brand {
 	text-shadow: 2px 2px 4px rgba(0, 0, 0);
 	font-family: Baskerville, Georgia, "Kaiti", "Liberation Serif", "Kaiti SC", STKaiti, "AR PL UKai CN", "AR PL UKai HK", "AR PL UKai TW", "AR PL UKai TW MBE", "AR PL KaitiM GB", KaiTi, KaiTi_GB2312, DFKai-SB, "TW\-Kai", serif;
 }
 
-#navbar.navbar-scrolled {
-	background-color: #333333 !important;
-}
 
 
 #navbar .nav-link {
@@ -281,19 +290,6 @@ footer a:hover {
 	overflow: hidden;
 	position: relative;
 }
-
-
-
-/* 
-.product-details-img-container {
-	height: 500px;
-}
-
-.product-details-img {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-} */
 
 
 
